fix alignment issues with global

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,3 +51,8 @@ h5 {
   color: $green-25;
   opacity: 95%;
 }
+
+.grid {
+  
+  align-items: start;
+}
